Made styling updates

--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -2,3 +2,16 @@
  * Safe Updates Main SCSS
  *
  */
+
+/* Tested up to - label color */
+
+.safe-updates-table td.tested-up-to {
+
+    &.untested {
+        color: red;
+    }
+
+    &.unknown {
+        color: yellow;
+    }
+}
