--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -55,6 +55,12 @@ $fa-font-path: "../../../node_modules/@fortawesome/fontawesome-free/webfonts";
     }
 }
 
+/* Safe Updates Core */
+
+#safe-updates-core {
+    margin: 35px 0;
+}
+
 /* Safe Updates Box */
 
 .safe-updates-box {
